--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -56,7 +56,7 @@ header h1 .seo {
     color: var(---framing-color);
 }
 
-header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -64,11 +64,11 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
