--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,20 @@
 /* Reset CSS */
+
+
 /* Todo: Review; Reset CSS Fundamental */
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+
 /* Color Themes */
+
+
 /* Todo: Review; Color Themes using CSS Variables */
+
 :root {
     --brand-color: #2a607c;
     --common-color: #ffffff;
@@ -16,20 +23,26 @@
     --framing-component2: #0072bb;
 }
 
+
 /* Utility classes */
+
 .float-left {
     float: left;
     margin-right: 25px;
 }
+
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+
 /* General layout */
+
 body {
     background-color: var(---framing-color);
 }
+
 a {
     color: var(--common-color);
     text-decoration: none;
@@ -39,7 +52,14 @@ p {
     font-size: 16px;
 }
 
+.subtitle {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+
 /* Apply styles to header section */
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -47,12 +67,12 @@ header {
     color: var(--common-color);
 }
 
-header h1 {
+header .site-title {
     display: inline-block;
     font-size: 48px;
 }
 
-header h1 .seo {
+header .seo {
     color: var(---framing-color);
 }
 
@@ -73,7 +93,9 @@ header nav ul li {
     margin-left: 25px;
 }
 
+
 /* Apply styles to the top hero section */
+
 .hero {
     height: 800px;
     width: 100%;
@@ -83,13 +105,14 @@ header nav ul li {
     background-position: center;
 }
 
+
 /* Apply styles to the main content on the left side */
+
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
 
 .content .search-engine-optimization {
     margin-bottom: 20px;
@@ -98,11 +121,6 @@ header nav ul li {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--framing-component2);
     color: var(--common-color);
-}
-
-.content .search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .content .search-engine-optimization img {
@@ -118,11 +136,6 @@ header nav ul li {
     color: var(--common-color);
 }
 
-.content .online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 .content .online-reputation-management img {
     max-height: 200px;
 }
@@ -136,16 +149,13 @@ header nav ul li {
     color: var(--common-color);
 }
 
-.content .social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 .content .social-media-marketing img {
     max-height: 200px;
 }
 
+
 /* Apply styles to the quick summary of benefits on the right side */
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -172,21 +182,6 @@ header nav ul li {
     color: var(--common-color);
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -205,7 +200,9 @@ header nav ul li {
     max-width: 150px;
 }
 
+
 /* Apply styles to footer */
+
 footer {
     padding: 30px;
     clear: both;
@@ -213,6 +210,6 @@ footer {
     text-align: center;
 }
 
-footer h2 {
+footer .subtitle {
     font-size: 20px;
 }
