--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,8 @@ a {
     text-decoration: none;
 }
 
-p {
+p,
+figcaption {
     font-size: 16px;
 }
 
@@ -165,6 +166,10 @@ header nav ul li {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--framing-component1);
+}
+
+.benefits .subtitle {
+    font-size: 28px;
 }
 
 .benefit-lead {
