--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,8 @@
     --framing-color: #d9dcd6;
     --framing-component1: #2589bd;
     --framing-component2: #0072bb;
+    --font-trebuchet: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    --font-gill-sans: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -41,6 +43,7 @@
 
 body {
     background-color: var(---framing-color);
+    font-family: var(--font-gill-sans);
 }
 
 a {
@@ -63,7 +66,7 @@ figcaption {
 
 header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: var(--font-trebuchet);
     background-color: var(--brand-color);
     color: var(--common-color);
 }
@@ -81,7 +84,6 @@ header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
@@ -119,7 +121,6 @@ header nav ul li {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--framing-component2);
     color: var(--common-color);
 }
@@ -132,7 +133,6 @@ header nav ul li {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--framing-component2);
     color: var(--common-color);
 }
@@ -145,7 +145,6 @@ header nav ul li {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--framing-component2);
     color: var(--common-color);
 }
@@ -164,7 +163,6 @@ header nav ul li {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--framing-component1);
 }
 
@@ -211,7 +209,7 @@ header nav ul li {
 footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: var(--font-trebuchet);
     text-align: center;
 }
 
